plugins {
    id("com.android.application")
}

android {
    namespace "com.plainphone.app"
    compileSdk 34

    defaultConfig {
        applicationId "com.plainphone.app"
        minSdk 26
        targetSdk 34
        versionCode 1
        versionName "0.1"
    }

    buildTypes {
        release {
            minifyEnabled false
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}
